--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rnjshippo/react-code-generator",
+  "name": "@rnjshippo/react-codegen",
   "version": "0.0.1",
   "description": "react boilerplate code generator",
   "repository": "https://github.com/rnjshippo/react-code-generator",
