--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rimraf ./dist && tsc -p tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "clean": "rimraf ./dist"
   },
-  "bin": "node ./bin/index.js",
+  "bin": "./bin/index.js",
   "dependencies": {
     "commander": "^7.2.0",
     "fs-extra": "^10.0.0"
