Add chalk module

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "bin": "./bin/index.js",
   "dependencies": {
+    "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "fs-extra": "^10.0.0"
   },
